force-app/main/default/objects/ffr__MassDeleteControlRecord__c/ffr__MassDeleteControlRecord__c.object-meta.xml
<CustomObject>
    <description>Stores batch information for performing a mass delete on the Accounting Summarization object.</description>
    <label>Mass Delete Control Record</label>
    <nameField>
        <displayFormat>MDCRLog{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Delete Control Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>