force-app/main/default/objects/ffr__MassDeleteControlRecord__c/fields/ffr__BatchProcess__c.field-meta.xml
<CustomField>
    <fullName>ffr__BatchProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Process</label>
    <referenceTo>ffr__fflib_BatchProcess__c</referenceTo>
    <relationshipLabel>MassDeleteControlRecord</relationshipLabel>
    <relationshipName>MassDeleteControlRecords</relationshipName>
    <type>Lookup</type>
</CustomField>