force-app/main/default/objects/ffr__MassDeleteControlRecord__c/fields/ffr__BatchStatus__c.field-meta.xml
<CustomField>
    <fullName>ffr__BatchStatus__c</fullName>
    <label>Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>