force-app/main/default/objects/ffr__MassDeleteControlRecord__c/fields/ffr__JobName__c.field-meta.xml
<CustomField>
    <fullName>ffr__JobName__c</fullName>
    <label>JobName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>