force-app/main/default/objects/ffr__MassDeleteControlRecord__c/fields/ffr__NotificationType__c.field-meta.xml
<CustomField>
    <fullName>ffr__NotificationType__c</fullName>
    <formula>IF(AND(ffr__TotalNumberOfErrors__c=0,ffr__TotalNumberOfAborts__c=0,ffr__TotalNumberOfExternal__c=0), 
&apos;Successful&apos;, 
IF(ffr__TotalNumberOfErrors__c = ffr__TotalNumberOfLogs__c, 
&apos;Failure&apos;, 
IF(ffr__TotalNumberOfAborts__c &gt; 0, 
&apos;Failure&apos;, 
IF( ffr__TotalNumberOfExternal__c &gt; 0, 
&apos;Failure&apos;, 
&apos;Mixed&apos; 
) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification Type</label>
    <type>Text</type>
</CustomField>