force-app/main/default/objects/ffr__MassDeleteControlRecord__c/fields/ffr__NumberOfQueuableErrors__c.field-meta.xml
<CustomField>
    <fullName>ffr__NumberOfQueuableErrors__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Errors from Queuable Jobs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>