force-app/main/default/objects/ffr__MassDeleteControlRecord__c/fields/ffr__TotalNumberOfAborts__c.field-meta.xml
<CustomField>
    <fullName>ffr__TotalNumberOfAborts__c</fullName>
    <label>Total Number of Aborts</label>
    <summaryFilterItems>
        <field>ffr__MassDeleteBatchLog__c.ffr__LogType__c</field>
        <operation>equals</operation>
        <value>Abort</value>
    </summaryFilterItems>
    <summaryForeignKey>ffr__MassDeleteBatchLog__c.ffr__MassDeleteControlRecord__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>