force-app/main/default/objects/ffr__MassDeleteControlRecord__c/fields/ffr__TotalNumberOfLogs__c.field-meta.xml
<CustomField>
    <fullName>ffr__TotalNumberOfLogs__c</fullName>
    <label>Total Number of Logs</label>
    <summaryForeignKey>ffr__MassDeleteBatchLog__c.ffr__MassDeleteControlRecord__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>